# lauexplore

./: README.md  environment.yml  pyproject.toml
.github/workflows/: release.yml
examples/strain_plots/: fluorescence_xeol.ipynb
laueutils/classes/: fitfile.py
laueutils/peaks/: indexation.py  simulate.py
laueutils/visualization/: _utils.py  emission.py  strain.py
lauexplore/: __init__.py
lauexplore/_defaults/: __init__.py  naming.py  rounding.py
lauexplore/_parsers/: __init__.py  _fitfile.py  _h5.py  _indexed_dataset.py  _peaklist.py  _yamlfile.py
lauexplore/_plots/: __init__.py  _heatmap.py
lauexplore/_utils/: __init__.py  _cbar.py  _compute_zlimits.py  _hide_print.py  chunks.py  strings.py
lauexplore/constants/: motors.py
lauexplore/dataset/: __init__.py  _dataset.py  _indexation.py  _indexation_quality.py  _strain.py
lauexplore/emission/: __init__.py  _fluorescence.py  _plots.py  _xeol.py  fluorescence.py
lauexplore/image/: __init__.py  _mosaic.py  _plot.py  _read.py  _roi.py  image.py
lauexplore/peaks/: __init__.py  _duplicates.py  _indexation.py  _intersect.py  _subtract.py  _track.py
lauexplore/plots/: __init__.py  base.py  composite.py  hovermenus.py
lauexplore/scan/: __init__.py  _scan.py  crop.py
