[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lauetools-utils"
version = "0.1.0"
description = "Utilities for LaueTools analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
  "numpy==2.0.*",
  "scipy==1.13.*",
  "matplotlib==3.9.*",
  "pandas==2.2.*",
  "h5py==3.11.*",
  "fabio==2024.9.*",
  "scikit-image==0.24.*",
  "scikit-learn==1.5.*",
  "wxpython==4.2.*",
  "plotly==6.*",
  "anywidget>=0.9",
  "multiprocess==0.70.18",
  "ipykernel",
  "jupyterlab",
  "ipympl",
  "ipywidgets",
  "widgetsnbextension",
  "LaueTools==3.1.19"
]

authors = [
  { name = "Sergio Bongiorno", email = "sergiobng@proton.me" },   
  { name = "Beatriz G Foschiani", email = "beatrizgfoschiani@gmail.com" }
]
maintainers = [
  { name = "Beatriz G Foschiani", email = "beatrizgfoschiani@gmail.com" }
]

[project.optional-dependencies]
dev = [
  "ipython",
  "ipywidgets",
  "pytest",
  "black",
  "flake8"
]
