[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lauexplore"
version = "1.0.3"
description = "Post processing tools for data produced by the lauetools package."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "numpy",
  "scipy",
  "matplotlib==3.9.*",
  "pandas",
  "h5py",
  "fabio",
  "scikit-image",
  "scikit-learn",
  "plotly==6.*",
  "kaleido",
  "anywidget>=0.9",
  "ipykernel",
  "jupyterlab",
  "ipympl",
  "ipywidgets",
  "widgetsnbextension",
  "lauetools==3.1.19"
]

authors = [
  { name = "Sergio Bongiorno", email = "sergiobng@proton.me" },   
  { name = "Beatriz G Foschiani", email = "beatrizgfoschiani@gmail.com" }
]
maintainers = [
  { name = "Beatriz G Foschiani", email = "beatrizgfoschiani@gmail.com" }
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8"
]
